Vista de html y css

--- a/calculadora_normal/calculadora.html
+++ b/calculadora_normal/calculadora.html
@@ -152,10 +152,38 @@
 
                 
             </div>
+        </section >
+        <!-- ----- Rectangulos --------- -->
+        <section class = "squares-view">
+            <div class="squares-container">
+                <div>
+                    <h2>Rectangulos</h2>
+                </div>
+                <div>
+                    <img src="/" alt="">
+                </div>
+                <div class="square-operations">
+                    <h3>operaciones</h3>
+                    <div>
+                        <p>area</p>
+                    </div>
+                    <div>
+                        <p>perimetro</p>
+                    </div>
+                    <div>
+                        <p>diagonal</p>
+                    </div>
+                    <div>
+                        <p>Angulo Alfa</p>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
     </main>
     <script src="./calculadora.js"></script>
+    <script src="./rectangulo.js"></script>
 </body>
 <!-- ----------------  Fin ----------------------------- -->
 </html>
