Funcion de area Reactangulo y mostrar resultado, css de la operacion area-rectangulo

--- a/calculadora_normal/calculadora.html
+++ b/calculadora_normal/calculadora.html
@@ -53,7 +53,7 @@
         <div class="side-bar inactive">
             <ul>
                 <li><a href="/" id="triangle-link">Triangulo</a></li>
-                <li><a href="/">rectangulo</a></li>
+                <li><a href="/" id="rectangulo-link">rectangulo</a></li>
                 <li><a href="/">circulo</a></li>
                 <li><a href="">Poligonos</a></li>
             </ul>
@@ -164,20 +164,32 @@
                 </div>
                 <div class="square-operations">
                     <h3>operaciones</h3>
-                    <div>
+                    <div class="squqre-operations-area">
                         <p>area</p>
                     </div>
-                    <div>
+                    <div class="squqre-operations-perimetro">
                         <p>perimetro</p>
                     </div>
-                    <div>
+                    <div class="squqre-operations-diagonal">
                         <p>diagonal</p>
                     </div>
-                    <div>
+                    <div class="squqre-operations-anguloAlfa">
                         <p>Angulo Alfa</p>
                     </div>
                 </div>
+                <div class="view-area-rectangulo-operation">
+                    <label for="inputLadoARectangulo">Lado A</label>
+                    <input id="inputLadoARectangulo" type="number">
+                    <label for="inputLadoBRectangulo">Lado B</label>
+                    <input id="inputLadoBRectangulo" type="number">
+                    <p id="btn-result-area-operation">resultado</p>
+                    <div class="view-result-area-output">
+                                              
+                    </div>
+
+                </div>
             </div>
+
 
         </section>
 
