Funcion de perimetro Reactangulo y mostrar resultado, css de la operacion Perimetro-rectangulo

--- a/calculadora_normal/calculadora.html
+++ b/calculadora_normal/calculadora.html
@@ -160,7 +160,7 @@
                     <h2>Rectangulos</h2>
                 </div>
                 <div>
-                    <img src="/" alt="">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0xVS3a0YmQrSS3-nnXgc-BCHrBV-W-f69UUZZgtDwwh3zQyIvShPH2qzkKeW4psg8x80&usqp=CAU" alt="">
                 </div>
                 <div class="square-operations">
                     <h3>operaciones</h3>
@@ -177,12 +177,23 @@
                         <p>Angulo Alfa</p>
                     </div>
                 </div>
-                <div class="view-area-rectangulo-operation">
+                <div class="view-area-rectangulo-operation inactive">
                     <label for="inputLadoARectangulo">Lado A</label>
-                    <input id="inputLadoARectangulo" type="number">
+                    <input class="inputLadoARectangulo" type="number" placeholder="escriba un numero">
                     <label for="inputLadoBRectangulo">Lado B</label>
-                    <input id="inputLadoBRectangulo" type="number">
+                    <input class="inputLadoBRectangulo" type="number" placeholder="escriba un numero">
                     <p id="btn-result-area-operation">resultado</p>
+                    <div class="view-result-area-output">
+                                              
+                    </div>
+
+                </div>
+                <div class="view-perimetro-rectangulo-operation inactive">
+                    <label for="inputLadoARectangulo">Lado A</label>
+                    <input class="inputLadoARectangulo" type="number" placeholder="escriba un numero">
+                    <label for="inputLadoBRectangulo">Lado B</label>
+                    <input class="inputLadoBRectangulo" type="number" placeholder="escriba un numero">
+                    <p id="btn-result-perimetro-operation">resultado</p>
                     <div class="view-result-area-output">
                                               
                     </div>
