inicio de html y css de circulo

--- a/calculadora_normal/calculadora.html
+++ b/calculadora_normal/calculadora.html
@@ -204,10 +204,29 @@
 
 
         </section>
+        <section class="circles-view">
+            <div>
+                <p>circulos</p>
+            </div>
+            <div class="menu-opciones-circulo">
+                <div id="div-circulo-operaciones-basicas">
+                    <p>operaciones Básicas</p>
+                    <div class="operaciones-basicas">
+                        <p>area</p>
+                        <p>perimetro</p>
+                        <p>diametro</p>
+                    </div>
+                </div>
+                <div id="boton-circulo-"><p>area</p></div>
+                <div id="boton-circulo-"><p>seccion</p></div>
+                <div id="boton-circulo-"><p>otros</p></div>
+            </div>            
+        </section>
 
     </main>
     <script src="./calculadora.js"></script>
     <script src="./rectangulo.js"></script>
+    <script src="./circulos.js"></script>
 </body>
 <!-- ----------------  Fin ----------------------------- -->
 </html>
